--- a/src/css/_animations.styl
+++ b/src/css/_animations.styl
@@ -6,38 +6,42 @@
 */
 
 .order-enter
+  background green
   transform: translateX(-120%)
-  transition 0.5s
+  transition 2s
   max-height: 0
   padding 0 !important
   &.order-enter-active
+    background gray
     max-height 60px
     transform: translateX(0)
     padding 2rem 0 !important
 
 .order-exit
-  transition 0.5s
+  background red
+  transition 2s
   transform: translateX(0)
   &.order-exit-active
+    background yellow
     transform: translateX(120%)
     padding: 0
 
 
 .count-enter
   background: red
-  transition .5s
+  transition 0.5s
   transform translateY(100%)
   &.count-enter-active
     background: yellow
     transform translateY(0)
 
 .count-exit
-  background: black
+  background: red
   transform translateY(0)
-  transition .5s
+  transition 0.5s
   position absolute
   left 0
   bottom 0
   &.count-exit-active
-    background green
+    background yellow
     transform translateY(-100%) scale(3)
